A lot more bits of small cleaning up